feat: update projects

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
     >
       <h1 class="font-medium">Projects</h1>
       <div>
-        <a href="#" class="group flex gap-1 items-center text-foreground"
+        <a
+          href="https://karlwordle.netlify.app"
+          class="group flex gap-1 items-center text-foreground"
           ><span
             class="underline underline-offset-4 decoration-muted/50 hover:decoration-muted duration-300 transition-decoration"
             >Wordle Clone
