feat: add blurred bar at the top

--- a/index.html
+++ b/index.html
@@ -12,129 +12,130 @@
     />
     <link rel="stylesheet" href="output.css" />
   </head>
-  <body
-    class="bg-background text-foreground max-w-3xl px-8 py-16 md:py-32 md:px-14 mx-auto selection:bg-muted/20"
-  >
-    <section class="animate-slide-in-up" style="animation-delay: 0.1s">
-      <h1 class="font-medium">Karl Võhma</h1>
-      <div>
-        <a href="https://github.com/emestry" class="group"
-          ><span
-            class="underline underline-offset-4 decoration-muted/50 hover:decoration-muted duration-300 transition-decoration"
-            >GitHub</span
-          ></a
-        >
-        /
-        <a href="https://fiverr.com/emestry" class="group"
-          ><span
-            class="underline underline-offset-4 decoration-muted/50 hover:decoration-muted duration-300 transition-decoration"
-            >Fiverr</span
-          ></a
-        >
-      </div>
+  <body class="bg-background text-foreground selection:bg-muted/20">
+    <nav class="bg-background/40 backdrop-blur-sm h-14 sticky top-0 z-10"></nav>
+    <div class="max-w-3xl mx-auto px-8 py-16 md:py-32 md:px-14">
+      <section class="animate-slide-in-up" style="animation-delay: 0.1s">
+        <h1 class="font-medium">Karl Võhma</h1>
+        <div>
+          <a href="https://github.com/emestry" class="group"
+            ><span
+              class="underline underline-offset-4 decoration-muted/50 hover:decoration-muted duration-300 transition-decoration"
+              >GitHub</span
+            ></a
+          >
+          /
+          <a href="https://fiverr.com/emestry" class="group"
+            ><span
+              class="underline underline-offset-4 decoration-muted/50 hover:decoration-muted duration-300 transition-decoration"
+              >Fiverr</span
+            ></a
+          >
+        </div>
 
-      <p class="mt-6">
-        <span class="italic">Coding interactions. </span>Bringing ideas to life
-        through code, design and careful attention to clarity and usability.
-        Freelancer at Fiverr.
-      </p>
+        <p class="mt-6">
+          <span class="italic">Coding interactions. </span>Bringing ideas to
+          life through code, design and careful attention to clarity and
+          usability. Freelancer at Fiverr.
+        </p>
 
-      <p class="mt-6">
-        Been in web development for 3 years. Lorem ipsum dolor sit amet
-        consectetur.
-      </p>
-    </section>
+        <p class="mt-6">
+          Been in web development for 3 years. Lorem ipsum dolor sit amet
+          consectetur.
+        </p>
+      </section>
 
-    <section
-      class="space-y-4 mt-10 animate-slide-in-up"
-      style="animation-delay: 0.3s"
-    >
-      <h1 class="font-medium">Projects</h1>
-      <div>
-        <a
-          href="https://karlwordle.netlify.app"
-          class="group flex gap-1 items-center text-foreground"
-          ><span
-            class="underline underline-offset-4 decoration-muted/50 hover:decoration-muted duration-300 transition-decoration"
-            >Wordle Clone
-          </span>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="currentColor"
-            class="size-4 fill-muted/40 mt-2 group-hover:fill-muted/60 transition-colors duration-300 pointer-events-none"
-          >
-            <polygon
-              points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7"
-            />
-          </svg>
-        </a>
-        <p class="text-muted mt-0.5">
-          A clone of the popular word game Wordle.
-        </p>
-      </div>
-      <div>
-        <a href="#" class="group flex gap-1 items-center text-foreground"
-          ><span
-            class="underline underline-offset-4 decoration-muted/50 hover:decoration-muted duration-300 transition-decoration"
-            >Inventory Management</span
-          >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="currentColor"
-            class="size-4 fill-muted/40 mt-2 group-hover:fill-muted/60 transition-colors duration-300 pointer-events-none"
-          >
-            <polygon
-              points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7"
-            />
-          </svg>
-        </a>
-        <p class="text-muted mt-0.5">A web app for managing inventory.</p>
-      </div>
-      <div>
-        <a href="#" class="group flex gap-1 items-center text-foreground"
-          ><span
-            class="underline underline-offset-4 decoration-muted/50 hover:decoration-muted duration-300 transition-decoration"
-            >Example Dashboard</span
-          >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="currentColor"
-            class="size-4 fill-muted/40 mt-2 group-hover:fill-muted/60 transition-colors duration-300 pointer-events-none"
-          >
-            <polygon
-              points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7"
-            />
-          </svg>
-        </a>
-        <p class="text-muted mt-0.5">An example dashboard.</p>
-      </div>
-    </section>
+      <section
+        class="space-y-4 mt-10 animate-slide-in-up"
+        style="animation-delay: 0.3s"
+      >
+        <h1 class="font-medium">Projects</h1>
+        <div>
+          <a
+            href="https://karlwordle.netlify.app"
+            class="group flex gap-1 items-center text-foreground"
+            ><span
+              class="underline underline-offset-4 decoration-muted/50 hover:decoration-muted duration-300 transition-decoration"
+              >Wordle Clone
+            </span>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="currentColor"
+              class="size-4 fill-muted/40 mt-2 group-hover:fill-muted/60 transition-colors duration-300 pointer-events-none"
+            >
+              <polygon
+                points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7"
+              />
+            </svg>
+          </a>
+          <p class="text-muted mt-0.5">
+            A clone of the popular word game Wordle.
+          </p>
+        </div>
+        <div>
+          <a href="#" class="group flex gap-1 items-center text-foreground"
+            ><span
+              class="underline underline-offset-4 decoration-muted/50 hover:decoration-muted duration-300 transition-decoration"
+              >Inventory Management</span
+            >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="currentColor"
+              class="size-4 fill-muted/40 mt-2 group-hover:fill-muted/60 transition-colors duration-300 pointer-events-none"
+            >
+              <polygon
+                points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7"
+              />
+            </svg>
+          </a>
+          <p class="text-muted mt-0.5">A web app for managing inventory.</p>
+        </div>
+        <div>
+          <a href="#" class="group flex gap-1 items-center text-foreground"
+            ><span
+              class="underline underline-offset-4 decoration-muted/50 hover:decoration-muted duration-300 transition-decoration"
+              >Example Dashboard</span
+            >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="currentColor"
+              class="size-4 fill-muted/40 mt-2 group-hover:fill-muted/60 transition-colors duration-300 pointer-events-none"
+            >
+              <polygon
+                points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7"
+              />
+            </svg>
+          </a>
+          <p class="text-muted mt-0.5">An example dashboard.</p>
+        </div>
+      </section>
 
-    <section class="mt-10 animate-slide-in-up" style="animation-delay: 0.5s">
-      <h1 class="font-medium">Now</h1>
-      <div class="mt-6 space-y-6">
-        <p>
-          Making projects to develop skills. I want to master web development
-          from every aspect.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-          quos. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-          quos. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        </p>
-      </div>
-    </section>
+      <section class="mt-10 animate-slide-in-up" style="animation-delay: 0.5s">
+        <h1 class="font-medium">Now</h1>
+        <div class="mt-6 space-y-6">
+          <p>
+            Making projects to develop skills. I want to master web development
+            from every aspect.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+            quos. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+            quos. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          </p>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
